syntax = "proto3";

package calculator;


option go_package = "github.com/Israel-Ferreira/grpc-go-course/calculator/proto";

import "sqrt.proto";

message SumRequest {
    int64 num1 = 1;
    int64 num2 = 2;
}


message AvgRequest {
    int64 num = 1;
}

message AvgResponse {
    double result = 1;
}


message SumResponse {
    int64 result = 1;
}


message PrimeDecompositionRequest {
    int64 num = 1;
}

message PrimeDecompositionResponse {
    int64 factor = 1;
}


message MaxMsgRequest {
    int64 num = 1;
}


message MaxMsgResponse {
    int64 result = 1;
}



service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse);
    rpc DecompositePrime(PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse);
    rpc Avg(stream AvgRequest) returns (AvgResponse);
    rpc Max(stream MaxMsgRequest) returns (stream MaxMsgResponse);
    rpc Sqrt(SqrtRequest) returns (SqrtResponse);
}